tests/sksl/errors/SwitchDuplicateCase.dsl.glsl
### Compilation failed:

error: duplicate case value '0'

1 error
